<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/maps"
        android:icon="@drawable/ic_maps"
        android:title="@string/maps"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/setting"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/language"
                android:icon="@drawable/ic_translate"
                android:title="@string/language"
                app:showAsAction="never" />
            <item
                android:id="@+id/logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/log_out"
                app:showAsAction="never" />
        </menu>
    </item>

</menu>